WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
294738
Failure to compile TensorFlow.js WebGL shaders
https://bugs.webkit.org/show_bug.cgi?id=294738
Summary
Failure to compile TensorFlow.js WebGL shaders
Kimmo Kinnunen
Reported
2025-06-19 10:49:33 PDT
https://chromium-review.googlesource.com/c/angle/angle/+/6656001
reference cannot bind to vector element int ANGLE_sc8b = ANGLE_preIncrementInt(_ucoords.z); ^~~~~~~~~~ program_source:94:63: note: passing argument to parameter 'a' here ANGLE_ALWAYS_INLINE thread T &ANGLE_preIncrementInt(thread T &a) ^ program_source:369:27: error: non-const reference cannot bind to vector element ANGLE_preIncrementInt(_usourceLoc.z); ^~~~~~~~~~~~~ program_source:94:63: note: passing argument to parameter 'a' here ANGLE_ALWAYS_INLINE thread T &ANGLE_preIncrementInt(thread T &a) ^ program_source:373:27: error: non-const reference cannot bind to vector element ANGLE_preDecrementInt(_usourceLoc.z); ^~~~~~~~~~~~~ program_source:101:63: note: passing argument to parameter 'a' here ANGLE_ALWAYS_INLINE thread T &ANGLE_preDecrementInt(thread T &a) ^ program_source:375:25: error: non-const reference cannot bind to vector element ANGLE_preDecrementInt(_ucoords.z);
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-06-19 10:50:31 PDT
<
rdar://problem/153836970
>
Kimmo Kinnunen
Comment 2
2025-06-26 04:10:36 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/47229
EWS
Comment 3
2025-06-27 12:35:10 PDT
Committed
296744@main
(adfd582f7f84): <
https://commits.webkit.org/296744@main
> Reviewed commits have been landed. Closing PR #47229 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug